Fix icon in "memberships" - missing in both search result and too big inside textarea!

--- a/modules/cms-webapp/src/main/webapp/admin/resources/css/main.css
+++ b/modules/cms-webapp/src/main/webapp/admin/resources/css/main.css
@@ -213,7 +213,7 @@ img.photo {
 }
 
 .icon-group {
-    background-image: url("../images/group.png");
+    background-image: url("../icons/16x16/group.png");
 }
 
 .icon-edit-user {
@@ -826,17 +826,17 @@ ul.cms-wizard-navigation a.last-current {
 }
 
 .cms-groups-boxselect li.x-boxselect-item {
-    background: url("../images/group.png") no-repeat 3px 3px transparent;
-    background-color: #DEE7F8;
+    background: url("../icons/16x16/group.png") no-repeat 3px 3px #DEE7F8;
 }
 
 .cms-groups-boxselect li.x-boxselect-item:hover {
-    background: url("../images/group.png") no-repeat 3px 3px transparent !important;
-    background-color: #BBCEF1 !important;
+    background: url("../icons/16x16/group.png") no-repeat 3px 3px #BBCEF1 !important;
 }
 
 .cms-groups-boxselect div.x-boxselect-item-text {
+    font-size: 11px;
     margin-left: 18px;
+    padding-top: 1px;
 }
 
 .cms-cursor-clickable {
